MedicalClinic/medical-service.yml
apiVersion: v1
kind: Service
metadata:
  name: medical-clinic-service
spec:
  ports:
  - name: http
    targetPort: 8181
    port: 80
  type: ClusterIP
  selector:
    app: medical-clinic
